--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="vertical-align: middle; padding-right: 8px; width: 20px;">
-                            <img src="https://cdn-icons-png.flaticon.com/512/126/126509.png" width="12" height="12" alt="Phone" style="display: block; border: 0;">
+                            <!-- Blue Phone Icon -->
+                            <img src="https://img.icons8.com/ios-filled/50/5469d4/phone.png" width="12" height="12" alt="Phone" style="display: block; border: 0;">
                         </td>
                         <td style="vertical-align: middle;">
                             <a href="tel:+330699913547" style="color: #3c4257; text-decoration: none;">+33 (0)6 99 91 35 47</a>
@@ -46,7 +47,8 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="vertical-align: middle; padding-right: 8px; width: 20px;">
-                            <img src="https://cdn-icons-png.flaticon.com/512/542/542638.png" width="12" height="12" alt="Email" style="display: block; border: 0;">
+                            <!-- Blue Email Icon -->
+                            <img src="https://img.icons8.com/ios-filled/50/5469d4/mail.png" width="12" height="12" alt="Email" style="display: block; border: 0;">
                         </td>
                         <td style="vertical-align: middle;">
                             <a href="mailto:j.doe@stripe.com" style="color: #3c4257; text-decoration: none;">j.doe@stripe.com</a>
@@ -76,16 +78,16 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" width="16" height="16" alt="LinkedIn" style="display: block; border: 0;"></a>
+                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/linkedin.png" width="16" height="16" alt="LinkedIn" style="display: block; border: 0;"></a>
                         </td>
                         <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" width="16" height="16" alt="Facebook" style="display: block; border: 0;"></a>
+                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/facebook-new.png" width="16" height="16" alt="Facebook" style="display: block; border: 0;"></a>
                         </td>
                         <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" width="16" height="16" alt="Twitter" style="display: block; border: 0;"></a>
+                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/twitter.png" width="16" height="16" alt="Twitter" style="display: block; border: 0;"></a>
                         </td>
                         <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" width="16" height="16" alt="Instagram" style="display: block; border: 0;"></a>
+                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/instagram-new.png" width="16" height="16" alt="Instagram" style="display: block; border: 0;"></a>
                         </td>
                     </tr>
                 </table>
@@ -98,7 +100,8 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="padding-right: 12px;">
-                            <a href="#" style="background-color: #0a2540; color: #ffffff; padding: 8px 16px; border-radius: 20px; text-decoration: none; font-size: 12px; display: inline-block; font-weight: bold; mso-padding-alt: 0;">
+                            <!-- Pill button: Dark Blue Background, White Text -->
+                            <a href="#" style="background-color: #0a2540; color: #ffffff; padding: 10px 20px; border-radius: 100px; text-decoration: none; font-size: 13px; display: inline-block; font-weight: bold; line-height: 1; mso-padding-alt: 0;">
                                 <!--[if mso]>
                                 <i style="letter-spacing: 25px; mso-font-width: -100%; mso-text-raise: 30pt;">&nbsp;</i>
                                 <![endif]-->
@@ -109,7 +112,8 @@
                             </a>
                         </td>
                         <td>
-                            <a href="#" style="background-color: #ffffff; color: #0a2540; padding: 7px 15px; border-radius: 20px; text-decoration: none; font-size: 12px; display: inline-block; font-weight: bold; border: 1px solid #0a2540; mso-padding-alt: 0;">
+                            <!-- Pill button: White Background, Dark Text, Dark Border -->
+                            <a href="#" style="background-color: #ffffff; color: #0a2540; padding: 9px 19px; border-radius: 100px; text-decoration: none; font-size: 13px; display: inline-block; font-weight: bold; border: 1px solid #0a2540; line-height: 1; mso-padding-alt: 0;">
                                 <!--[if mso]>
                                 <i style="letter-spacing: 25px; mso-font-width: -100%; mso-text-raise: 30pt;">&nbsp;</i>
                                 <![endif]-->
@@ -128,7 +132,7 @@
         <tr>
             <td>
                 <!-- Placeholder for the banner image. In production, this should be hosted on GitHub or a CDN. -->
-                <img src="https://placehold.co/600x150/0a2540/ffffff?text=The+backbone+for+internet+business&font=lato" width="600" alt="Banner" style="width: 100%; max-width: 600px; height: auto; display: block; border-radius: 4px;">
+                <img src="/banner.png" width="600" alt="Banner" style="width: 100%; max-width: 600px; height: auto; display: block; border-radius: 4px;">
             </td>
         </tr>
     </table>
