--- a/signature-1/index.html
+++ b/signature-1/index.html
@@ -132,7 +132,7 @@
         <tr>
             <td>
                 <!-- Placeholder for the banner image. In production, this should be hosted on GitHub or a CDN. -->
-                <img src="/banner.png" width="600" alt="Banner" style="width: 100%; max-width: 600px; height: auto; display: block; border-radius: 4px;">
+                <img src="https://raw.githubusercontent.com/yassinerzk/signatures/refs/heads/main/signature-1/banner.png" width="600" alt="Banner" style="width: 100%; max-width: 600px; height: auto; display: block; border-radius: 4px;">
             </td>
         </tr>
     </table>
