feat(signature): update signature template with KlayCreate details
Replace placeholder content with KlayCreate's information including name, contact details, website, and social media links. Remove unused hiring and product buttons to simplify the signature.

--- a/signature-1/index.html
+++ b/signature-1/index.html
@@ -15,7 +15,7 @@
         <!-- Name and Title -->
         <tr>
             <td style="padding-bottom: 4px;">
-                <strong style="font-size: 16px; color: #1a1f36;">John Doe</strong>
+                <strong style="font-size: 16px; color: #1a1f36;">Rita Saaidi</strong>
             </td>
         </tr>
         <tr>
@@ -30,11 +30,11 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="vertical-align: middle; padding-right: 8px; width: 20px;">
-                            <!-- Blue Phone Icon -->
-                            <img src="https://img.icons8.com/ios-filled/50/5469d4/phone.png" width="12" height="12" alt="Phone" style="display: block; border: 0;">
+                            <!-- Orange Phone Icon -->
+                            <img src="https://img.icons8.com/ios-filled/50/ff6903/phone.png" width="12" height="12" alt="Phone" style="display: block; border: 0;">
                         </td>
                         <td style="vertical-align: middle;">
-                            <a href="tel:+330699913547" style="color: #3c4257; text-decoration: none;">+33 (0)6 99 91 35 47</a>
+                            <a href="tel:+212663059641" style="color: #3c4257; text-decoration: none !important;">+212 663 059 641</a>
                         </td>
                     </tr>
                 </table>
@@ -47,11 +47,11 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="vertical-align: middle; padding-right: 8px; width: 20px;">
-                            <!-- Blue Email Icon -->
-                            <img src="https://img.icons8.com/ios-filled/50/5469d4/mail.png" width="12" height="12" alt="Email" style="display: block; border: 0;">
+                            <!-- Orange Email Icon -->
+                            <img src="https://img.icons8.com/ios-filled/50/ff6903/mail.png" width="12" height="12" alt="Email" style="display: block; border: 0;">
                         </td>
                         <td style="vertical-align: middle;">
-                            <a href="mailto:j.doe@stripe.com" style="color: #3c4257; text-decoration: none;">j.doe@stripe.com</a>
+                            <a href="mailto:info@klaycreate.com" style="color: #3c4257; text-decoration: none !important;">info@klaycreate.com</a>
                         </td>
                     </tr>
                 </table>
@@ -68,7 +68,7 @@
         <!-- Website -->
         <tr>
             <td style="padding-bottom: 16px;">
-                <a href="https://www.stripe.com" style="color: #5469d4; text-decoration: none; font-weight: bold;">www.stripe.com</a>
+                <a href="https://klaycreate.com" style="color: #ff6903; text-decoration: none !important; font-weight: bold;">klaycreate.com</a>
             </td>
         </tr>
 
@@ -78,16 +78,10 @@
                 <table cellpadding="0" cellspacing="0" border="0">
                     <tr>
                         <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/linkedin.png" width="16" height="16" alt="LinkedIn" style="display: block; border: 0;"></a>
+                            <a href="https://www.linkedin.com/company/klay-creates" style="text-decoration: none !important;"><img src="https://img.icons8.com/ios-filled/50/ff6903/linkedin.png" width="16" height="16" alt="LinkedIn" style="display: block; border: 0;"></a>
                         </td>
                         <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/facebook-new.png" width="16" height="16" alt="Facebook" style="display: block; border: 0;"></a>
-                        </td>
-                        <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/twitter.png" width="16" height="16" alt="Twitter" style="display: block; border: 0;"></a>
-                        </td>
-                        <td style="padding-right: 12px;">
-                            <a href="#"><img src="https://img.icons8.com/ios-filled/50/5469d4/instagram-new.png" width="16" height="16" alt="Instagram" style="display: block; border: 0;"></a>
+                            <a href="https://www.instagram.com/klaycreativelabs/" style="text-decoration: none !important;"><img src="https://img.icons8.com/ios-filled/50/ff6903/instagram-new.png" width="16" height="16" alt="Instagram" style="display: block; border: 0;"></a>
                         </td>
                     </tr>
                 </table>
@@ -95,38 +89,7 @@
         </tr>
 
         <!-- Buttons -->
-        <tr>
-            <td style="padding-bottom: 24px;">
-                <table cellpadding="0" cellspacing="0" border="0">
-                    <tr>
-                        <td style="padding-right: 12px;">
-                            <!-- Pill button: Dark Blue Background, White Text -->
-                            <a href="#" style="background-color: #0a2540; color: #ffffff; padding: 10px 20px; border-radius: 100px; text-decoration: none; font-size: 13px; display: inline-block; font-weight: bold; line-height: 1; mso-padding-alt: 0;">
-                                <!--[if mso]>
-                                <i style="letter-spacing: 25px; mso-font-width: -100%; mso-text-raise: 30pt;">&nbsp;</i>
-                                <![endif]-->
-                                <span style="mso-text-raise: 15pt;">We are hiring</span>
-                                <!--[if mso]>
-                                <i style="letter-spacing: 25px; mso-font-width: -100%;">&nbsp;</i>
-                                <![endif]-->
-                            </a>
-                        </td>
-                        <td>
-                            <!-- Pill button: White Background, Dark Text, Dark Border -->
-                            <a href="#" style="background-color: #ffffff; color: #0a2540; padding: 9px 19px; border-radius: 100px; text-decoration: none; font-size: 13px; display: inline-block; font-weight: bold; border: 1px solid #0a2540; line-height: 1; mso-padding-alt: 0;">
-                                <!--[if mso]>
-                                <i style="letter-spacing: 25px; mso-font-width: -100%; mso-text-raise: 30pt;">&nbsp;</i>
-                                <![endif]-->
-                                <span style="mso-text-raise: 15pt;">Discover our products</span>
-                                <!--[if mso]>
-                                <i style="letter-spacing: 25px; mso-font-width: -100%;">&nbsp;</i>
-                                <![endif]-->
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
+        
 
         <!-- Banner Image -->
         <tr>
