style(signature): update website link color to dark theme
Change the link color from orange (#ff6903) to dark gray (#1a1f36) to match the new dark theme design

--- a/signature-1/index.html
+++ b/signature-1/index.html
@@ -68,7 +68,7 @@
         <!-- Website -->
         <tr>
             <td style="padding-bottom: 16px;">
-                <a href="https://klaycreate.com" style="color: #ff6903; text-decoration: none !important; font-weight: bold;">klaycreate.com</a>
+                <a href="https://klaycreate.com" style="color: #1a1f36; text-decoration: none !important; font-weight: bold;">klaycreate.com</a>
             </td>
         </tr>
 
