docs(signature): update job title and remove address from email signature
Update the job title from "Head of Marketing" to "Art Director" and remove the physical address from the email signature template to reflect current role and simplify contact information.

--- a/signature-1/index.html
+++ b/signature-1/index.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td style="padding-bottom: 12px; color: #697386;">
-                Head of Marketing
+                Art Director
             </td>
         </tr>
 
@@ -58,12 +58,6 @@
             </td>
         </tr>
 
-        <!-- Address -->
-        <tr>
-            <td style="padding-bottom: 4px; color: #697386;">
-                354 Oyster Point Blvd South San Francisco, CA 94080
-            </td>
-        </tr>
 
         <!-- Website -->
         <tr>
