--- a/signature-1/index.html
+++ b/signature-1/index.html
@@ -62,7 +62,17 @@
         <!-- Website -->
         <tr>
             <td style="padding-bottom: 16px;">
-                <a href="https://klaycreate.com" style="color: #1a1f36; text-decoration: none !important; font-weight: bold;">klaycreate.com</a>
+                <table cellpadding="0" cellspacing="0" border="0">
+                    <tr>
+                        <td style="vertical-align: middle; padding-right: 8px; width: 20px;">
+                            <!-- Orange Website Icon -->
+                            <img src="https://img.icons8.com/ios-filled/50/ff6903/globe.png" width="12" height="12" alt="Website" style="display: block; border: 0;">
+                        </td>
+                        <td style="vertical-align: middle;">
+                            <a href="https://klaycreate.com" style="color: #1a1f36; text-decoration: none !important; font-weight: bold;">klaycreate.com</a>
+                        </td>
+                    </tr>
+                </table>
             </td>
         </tr>
 
@@ -89,7 +99,9 @@
         <tr>
             <td>
                 <!-- Placeholder for the banner image. In production, this should be hosted on GitHub or a CDN. -->
-                <img src="https://raw.githubusercontent.com/yassinerzk/signatures/refs/heads/main/signature-1/banner.png" width="600" alt="Banner" style="width: 100%; max-width: 600px; height: auto; display: block; border-radius: 4px;">
+                <a href="https://klaycreate.com" style="display: block; text-decoration: none !important;">
+                    <img src="https://raw.githubusercontent.com/yassinerzk/signatures/refs/heads/main/signature-1/banner.png" width="600" alt="Banner" style="width: 100%; max-width: 600px; height: auto; display: block; border-radius: 4px; border: 0;">
+                </a>
             </td>
         </tr>
     </table>
